@@ -254,7 +254,9 @@ void GBVideoProxyRendererFinishFrame(struct GBVideoRenderer* renderer) {
 		proxyRenderer->logger->lock(proxyRenderer->logger);
 		proxyRenderer->logger->wait(proxyRenderer->logger);
 	}
-	proxyRenderer->backend->finishFrame(proxyRenderer->backend);
+	if (!proxyRenderer->logger->block) {
+		proxyRenderer->backend->finishFrame(proxyRenderer->backend);
+	}
 	mVideoLoggerRendererFinishFrame(proxyRenderer->logger);
 	mVideoLoggerRendererFlush(proxyRenderer->logger);
 	if (proxyRenderer->logger->block && proxyRenderer->logger->wait) {
