@@ -60,6 +60,7 @@ Bugfixes:
  - GB MBC: Improve multicart detection heuristic (fixes mgba.io/i/1177)
  - GB Audio: Fix channel 3 reset value
  - GB Audio: Fix channel 4 initial LFSR
+ - GB, GBA Video: Don't call finishFrame twice in thread proxy
 Misc:
  - GBA Timer: Use global cycles for timers
  - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
